@@ -1,6 +1,7 @@
 todoyu assets extension changelog
 
 assets 1.3.0 - not released yet
+	* Added: Check see rights for comment assets
 	* Added: Possibility to add comment assets
 	* Added: Added record selector with dropdown instead of autocompleter
 	* Added: Added parenttype comment for assets
